tests/ui/valueless_call.stderr
Error [E0116]: `shout` doesn't hand back a value
  --> tests/ui/valueless_call.jet:6:13
    |
  6 |     val x = shout();
    |             ^^^^^
 Why: only calls that declare `-> Type` can be used as a value
 Fix: call `shout` on its own line, or give it a return type
