tests/ui/valueless_call.jet
fn shout() {
    print("hi");
}

fn main() {
    val x = shout();
    print(x);
}
